--- a/src/rmutil/CMakeLists.txt
+++ b/src/rmutil/CMakeLists.txt
@@ -8,3 +8,15 @@ ADD_LIBRARY(rmutil OBJECT
     strings.c
     util.c
     vector.c)
+
+FUNCTION(_rmutilTest name)
+    ADD_EXECUTABLE("${name}" "${name}.c" $<TARGET_OBJECTS:rmutil>)
+    ADD_TEST(NAME "${name}" COMMAND "${name}")
+ENDFUNCTION()
+
+FILE(GLOB TEST_SOURCES "test_*.c")
+FOREACH(n ${TEST_SOURCES})
+    GET_FILENAME_COMPONENT(test_name ${n} NAME_WE)
+    _rmutilTest("${test_name}")
+ENDFOREACH()
+
